--- a/app.json
+++ b/app.json
@@ -1,15 +1,17 @@
 {
   "pages": [
-    "pages/Login/login",
     "pages/sHome/s-home",
+    "pages/Login/login",    
     "pages/sHome/Progress/progress",
     "pages/sHome/Repair/repair",
     "pages/sStory/s-story",
-    "pages/Student/student"
+    "pages/Student/student",
+    "pages/sStory/evaluation/evaluation"
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#3A63BD"
+    "navigationBarBackgroundColor": "#3A63BD",
+    "navigationBarTitleText": "湖工大网络报修"
   },
   "tabBar": {
     "borderStyle": "white",
@@ -40,8 +42,10 @@
   "usingComponents": {
     "l-button": "/miniprogram_npm/lin-ui/button/index",
     "l-card": "/miniprogram_npm/lin-ui/card/index",
+    "l-rate": "/miniprogram_npm/lin-ui/rate/index",
     "l-list": "/miniprogram_npm/lin-ui/list/index",
     "l-avatar": "/miniprogram_npm/lin-ui/avatar/index",
+    "l-album": "/miniprogram_npm/lin-ui/album/index",
     "l-step": "/miniprogram_npm/lin-ui/step/index",
     "l-steps": "/miniprogram_npm/lin-ui/steps/index",
     "l-textarea": "/miniprogram_npm/lin-ui/textarea/index",
@@ -50,6 +54,8 @@
     "l-form": "/miniprogram_npm/lin-ui/form/index",
     "l-form-item": "/miniprogram_npm/lin-ui/form-item/index",
     "l-input": "/miniprogram_npm/lin-ui/input/index",
-    "l-image-picker": "/miniprogram_npm/lin-ui/image-picker/index"
+    "l-image-picker": "/miniprogram_npm/lin-ui/image-picker/index",
+    "content-card": "/components/content-card/index",
+    "content-title": "/components/content-title/index"
   }
 }
